dev/manifests/3rd-party/logstash/logstash/logstash-network-policy.yml
---
# Source: xxxxx/templates/logstash/logstash-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logstash-ingress
  annotations:
    pia-team.com/role: pia.k8s.elastic/0.5.0
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 5044
      protocol: TCP
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: logstash-logstash
  policyTypes:
  - Ingress
---
# Source: xxxxx/templates/logstash/logstash-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logstash-egress
  annotations:
    pia-team.com/role: pia.k8s.elastic/0.5.0
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 9200
      protocol: TCP
    - port: 9092
      protocol: TCP
  podSelector:
    matchLabels:
      app: logstash-logstash
  policyTypes:
  - Egress
